# multiCMake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
dynamicA/: CMakeLists.txt  dynamicA.cpp
inc/: dynamicA.h
main/: CMakeLists.txt  main.cpp
staticA/: CMakeLists.txt  staticA.cpp
